<resources>
    <string name="app_name">午夜神器</string>

    <string name="tab_community">社区</string>
    <string name="tab_mall">商城</string>
    <string name="tab_message">消息</string>
    <string name="tab_discover">发现</string>
    <string name="tab_personal">个人</string>

    <!--我的-->
    <string name="personal_recharge_str">钱包</string>
    <string name="personal_myorder_str">我的订单</string>
    <string name="personal_myvip_str">VIP中心</string>
    <string name="personal_mygift_str">礼物</string>
    <string name="personal_task_str">每日赚金币</string>
    <string name="personal_maillist_str">通讯录邀请</string>
    <string name="personal_service_str">联系客服</string>
    <string name="personal_service_phone_str">400-820-5310</string>

    <string name="start_session_record">我发起了白板演示</string>
    <string name="session_end_record">白板演示已结束</string>

    <string name="coin">1、金币获取途径：

\n\n升级：每次等级提升即可领取一定数量的金币，最高20000金币。

\n\n任务：完成每日任务可获得一定数量的金币。

\n\n签到：坚持每日签到可获得金币奖励，连续签到天数越多奖励越多。

\n\n活动：午夜神器会不定期举办各式各样的活动，送出大量的金币。

\n\n充值：午夜神器提供金币充值功能，冲的越多，送的越多。

\n\n会员：购买会员后除了特权、经验外，还赠送大量的金币。

\n\n购物：购物支付成功后即可获得少量的金币奖励。

\n\n钻石兑金币：通过一定比例，将账户中的“钻石”转化为“金币”使用。


\n\n\n2、金币用途：

\n\n金币可用来体验魔聊、私信、打赏、众筹、心愿墙、电台、送礼、语音广场、修改昵称等除钻石商城以外的所有功能。

\n\nPS：金币积累一定数量时，将有机会名列等级排行榜，并解锁财富成就，倍有面子！</string>

    <string name="diamonds">钻石是指夜友在使用午夜神器过程中赚取的虚拟货币，可用于提现、兑换商品、兑换金币等。

\n\n1.钻石获取方式：

\n\n认证女夜友可以通过魔聊、私信、电台、收到礼物、帖子被打赏等方式获得钻石，其他夜友可通过收到礼物、帖子被打赏等方式获得钻石。


\n\n\n2.钻石提现说明：

\na.第一次提现需绑定个人支付宝和设置支付密码；
\nb.金额满50元可提现，小于200元的提现将收取3元手续费，一般3个工作日内到账；
\nc.二次提现只需验证支付密码即可，若多次验证失败，系统将对提现账户冻结24小时。系统自动解除冻结后，可重新验证或修改支付密码；
\nd.可自行修改绑定的支付宝帐号和支付密码；
\ne.应保证绑定支付宝帐号的正确可用性，因个人问题导致的提现错误午夜神器概不负责；


\n\n\n3.钻石可兑换为金币，兑换时，支付密码验证成功，即可完成兑换；

\n\n如有问题，请联系客服电话4008205310</string>

</resources>
